--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -53,12 +53,11 @@
             display: inline-block;
             border-color: #04a1a1;
             background: #04a1a1;
-            color: #fff;
+            color: #000000;
             border-radius: 0;
             font-size: 24px;
-            padding: .25rem .75rem;
-            -webkit-filter: drop-shadow(7px 8px 0 #000);
-            filter: drop-shadow(7px 8px 0 black);
+            padding: .20rem .70rem;
+            filter: drop-shadow(5px 6px 0 black);
             margin-top: .25rem;
           }
 
@@ -96,6 +95,7 @@
             <li><a href="/auth/logout">Sair</a></li>
             <% } else { %>
             <li><a href="/auth/login">Entrar</a></li>
+            <li><a href="/auth/register">Registrar</a></li>
             <% } %>
           </ul>
         </nav>
