--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -3,106 +3,29 @@
     <head>
         <meta charset="utf-8">
         <title>OAuth Tutorials</title>
+        <link rel="stylesheet" type="text/css" href="/style/login.css">
         <style>
-          body {
-            background-color: #2D00AA;
+          form {
+            background-color: transparent;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+          }
+
+          input {
+            border: none;
+            margin: 3% 0 3% 0;
+            padding: 0 0 0 5%;
+            height: 4vh;
+            width: 13vw;
+            font-size: 1em;
             font-family: 'Inconsolata', monospace;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 90vh;
           }
 
-          #container {
-            background-color: #BBBBBB;
-            width: 60vw;
-            height: 45vh;
-            padding: 6.125px 11.5px 7px 10.5px;
-            border-style: solid;
-            border-width: .875px 2px;
-            box-shadow: -3.5px -7px 0 0 #bbb, 2.5px 6.125px 0 0 #bbb, -3.5px 6.125px 0 0 #bbb, 2.5px -7px 0 0 #bbb;
-            filter: drop-shadow(7px 8px 0 black);
+          button {
+            margin: 3% 0 3% 0;
+            font-family: 'Inconsolata', monospace;
           }
-
-          header, main {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-          }
-
-          #container h1 {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: auto;
-            background-color: black;
-            color: #BBBBBB;
-          }
-
-          #container nav {
-            width: 60vw;
-            position: absolute;
-            bottom: 2vh;
-            display: flex;
-            justify-content: center;
-          }
-
-          #container nav li {
-            list-style-type: none;
-            display: inline-block;
-            border-color: #04a1a1;
-            background: #04a1a1;
-            color: #000000;
-            border-radius: 0;
-            font-size: 24px;
-            padding: .20rem .70rem;
-            filter: drop-shadow(5px 6px 0 black);
-            margin-top: .25rem;
-          }
-
-        #container nav li:hover {
-            border-color: #d2ff55;
-            background: #d2ff55;
-            color: black;
-        }
-
-        nav a {
-          color: #000000;
-          font-size: 18px;
-          text-decoration: none;
-          padding: 10px;
-          display: block;
-        }
-
-        .login-btn {
-          color: #BBBBBB;
-          width: 5vw;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          border-radius: 50px;
-          text-decoration: none;
-          font-size: 18px;
-          padding: 10px;
-          margin: 0.5% 0 0.5% 0;
-        }
-
-        #google {
-          background: #DB4437;
-        }
-
-        #google:hover {
-          background: #df574b;
-        }
-
-        #facebook {
-          background: #3b5998;
-        }
-
-        #facebook:hover {
-          background: #4f6aa2;
-        }
         </style>
     </head>
     <body>
@@ -113,8 +36,16 @@
         </header>
 
         <main>
-            <a class="login-btn" id="google" href="/auth/google">Google+</a>
-            <a class="login-btn" id="facebook" href="/auth/facebook">Facebook</a>
+          <form action="/auth/login" method="POST">
+            <input type="email" name="email" placeholder="email"><br>
+            <input type="password" name="password" placeholder="senha"><br>
+
+            <button type="submit">Entrar</button>
+          </form>
+          <div id="oauth-buttons">
+          <a class="login-btn" id="google" href="/auth/google">Google+</a>
+          <a class="login-btn" id="facebook" href="/auth/facebook">Facebook</a>
+          </div>
         </main>
 
         <nav>
