--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -3,99 +3,29 @@
     <head>
         <meta charset="utf-8">
         <title>OAuth Tutorials</title>
+        <link rel="stylesheet" type="text/css" href="/style/profile.css">
         <style>
-          body {
-            background-color: #2D00AA;
-            font-family: 'Inconsolata', monospace;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 90vh;
-          }
-
-          #container {
-            background-color: #BBBBBB;
-            width: 60vw;
-            height: 45vh;
-            padding: 6.125px 11.5px 7px 10.5px;
-            border-style: solid;
-            border-width: .875px 2px;
-            box-shadow: -3.5px -7px 0 0 #bbb, 2.5px 6.125px 0 0 #bbb, -3.5px 6.125px 0 0 #bbb, 2.5px -7px 0 0 #bbb;
-            filter: drop-shadow(7px 8px 0 black);
-          }
-
-          header, main {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-          }
-
-          #container h1 {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: auto;
-            background-color: black;
-            color: #BBBBBB;
-          }
-
-          #container form {
+          form {
             background-color: transparent;
             display: flex;
             align-items: center;
             flex-direction: column;
           }
 
-          #container .create-user-input {
+          input {
             border: none;
             margin: 3% 0 3% 0;
             padding: 0 0 0 5%;
-            height: 5vh;
-            width: 15vw;
-            background: #000000;
-            color: #BBBBBB;
-            font-size: 20px;
+            height: 4vh;
+            width: 13vw;
+            font-size: 1em;
+            font-family: 'Inconsolata', monospace;
           }
 
-          #container nav {
-            width: 60vw;
-            position: absolute;
-            bottom: 2vh;
-            display: flex;
-            justify-content: center;
+          button {
+            margin: 3% 0 3% 0;
+            font-family: 'Inconsolata', monospace;
           }
-
-          #container nav li, #submit-btn {
-            list-style-type: none;
-            display: inline-block;
-            border-color: #04a1a1;
-            background: #04a1a1;
-            color: #000000;
-            border-radius: 0;
-            font-size: 24px;
-            padding: .20rem .70rem;
-            filter: drop-shadow(5px 6px 0 black);
-            margin-top: .25rem;
-          }
-
-          #submit-btn {
-            width: 5vw;
-          }
-
-        #container nav li:hover, #submit-btn:hover {
-            border-color: #d2ff55;
-            background: #d2ff55;
-            color: black;
-        }
-
-        nav a {
-          color: #000000;
-          font-size: 18px;
-          text-decoration: none;
-          padding: 10px;
-          display: block;
-        }
         </style>
     </head>
     <body>
@@ -107,9 +37,11 @@
 
         <main>
             <form action="/auth/register" method="POST">
-              <input class="create-user-input" type="email" name="email" placeholder="email"><br>
-              <input class="create-user-input" type="password" name="password" placeholder="password"><br>
-              <button id="submit-btn" type="submit">Criar</button>
+              <input type="name" name="name" placeholder="nome"><br>
+              <input type="email" name="email" placeholder="email"><br>
+              <input type="password" name="password" placeholder="senha"><br>
+
+              <button type="submit">Criar</button>
             </form>
         </main>
 
