--- a/src/views/details.ejs
+++ b/src/views/details.ejs
@@ -9,12 +9,10 @@
       <div id="container">
         <header>
             <h1>Detalhes</h1>
-            <h2><%= user.name? user.name : user.email%></h2>
         </header>
 
         <main>
-            <img src="<%= user.thumbnail %>" />
-            <a href="/auth/getDetails?token=<%= token %>">Ver mais</a>
+            <img src="https://media1.giphy.com/media/26h0pHNtHKjmDo4WQ/giphy.gif">
         </main>
 
         <nav>
