--- a/src/public/style/profile.css
+++ b/src/public/style/profile.css
@@ -25,6 +25,10 @@ header, main {
   align-items: center;
 }
 
+main a {
+  margin: 1% 0 1% 0;
+}
+
 #container h1 {
   display: flex;
   flex-direction: column;
