--- a/src/views/details.ejs
+++ b/src/views/details.ejs
@@ -12,7 +12,8 @@
         </header>
 
         <main>
-            <img src="https://media1.giphy.com/media/26h0pHNtHKjmDo4WQ/giphy.gif">
+            <p>Uhuuuul voce esta numa rota protegida</p>
+            <img src="https://media1.giphy.com/media/26h0pHNtHKjmDo4WQ/giphy.gif" height="200px">
         </main>
 
         <nav>
