Revert "Organizando o projeto"
This reverts commit fdc89e1ee95b778053af3628f9a35ff394b5cf20.

--- a/src/views/details.ejs
+++ b/src/views/details.ejs
@@ -12,8 +12,7 @@
         </header>
 
         <main>
-            <p>Uhuuuul voce esta numa rota protegida</p>
-            <img src="https://media1.giphy.com/media/26h0pHNtHKjmDo4WQ/giphy.gif" height="200px">
+            <img src="https://media1.giphy.com/media/26h0pHNtHKjmDo4WQ/giphy.gif">
         </main>
 
         <nav>
